# Autosail_ws

./: README.md  datos_de_navegacion.csv
GUI/: package.xml  setup.py
GUI/GUI/: GUI_node.py
GUI/GUI/Simulator/: Autosail_Simulator.py  spinbox19.py
autosail_gz/: CMakeLists.txt  package.xml
autosail_gz/hooks/: resource_paths.sh
autosail_gz/launch/: spawn.launch.py
autosail_gz/models/SingleSail_robot/: model.config  model.sdf
autosail_gz/models/SingleSail_robot/meshes/: vela.dae
autosail_gz/models/coast_waves/: model.sdf
autosail_gz/models/dock_2022/: model.sdf
autosail_gz/models/robotx_light_buoy/: model.sdf
autosail_gz/models/short_navigation_course_0/: model.sdf
autosail_gz/src/: AcousticPingerPlugin.cc  LightBuoyPlugin.hh  PlacardPlugin.cc  PlacardPlugin.hh  PolyhedronVolume.cc  ScoringPlugin.cc  ShapeVolume.hh  SimpleHydrodynamics.hh  Surface.hh
autosail_gz/src/autosail_gz/: bridges.py  launch.py  model.py  payload_bridges.py
autosail_gz/worlds/: fortress.sdf  nbpark.sdf  sydney_regatta.sdf  test_robot_world.sdf  test_world.sdf
autosail_urdf/autosail_description/: package.xml
autosail_urdf/autosail_description/hooks/: resource_paths.dsv.in
autosail_urdf/autosail_description/meshes/: direccion.dae  sailboat.dae
autosail_urdf/autosail_description/urdf/: autosail_base.urdf.xacro
autosail_urdf/autosail_gazebo/hooks/: resource_paths.sh
autosail_urdf/sailboat_gazebo/models/mono_camera/: model.sdf
autosail_urdf/sailboat_gazebo/urdf/: macros.xacro  sailboat_gazebo.urdf.xacro  sailboat_gazebo.xacro
autosail_urdf/sailboat_gazebo/urdf/components/: camera.xacro  gps.xacro  imu.xacro  lidar.xacro
autosail_urdf/sailboat_gazebo/urdf/dynamics/: autosail_dynamics_plugin.xacro
my_sailboat_controller/: setup.py
my_sailboat_controller/my_sailboat_controller/: communicate.py  gazebo_node.py  my_controller_node.py  my_decoding_node.py  pid_controller.py
src/: ReadMe.md
src/GUI/GUI/: GUI_init.py  GUI_node.py
src/GUI/GUI/Simulator/: Autosail_Simulator.py
src/autosail_gz/src/: AcousticPingerPlugin.hh  LightBuoyPlugin.cc  PolyhedraBuoyancyDrag.cc  PolyhedraBuoyancyDrag.hh  PolyhedronVolume.hh  PublisherPlugin.cc  PublisherPlugin.hh  ScoringPlugin.hh  ShapeVolume.cc  SimpleHydrodynamics.cc  Surface.cc  WaveVisual.cc  WaveVisual.hh  Wavefield.cc  Wavefield.hh
src/autosail_gz/src/autosail_gz/: bridges.py  launch.py  model.py  payload_bridges.py
src/autosail_ros/: CMakeLists.txt  package.xml
src/autosail_urdf/autosail_description/: CMakeLists.txt  comand_urdf_spawn
src/autosail_urdf/autosail_description/hooks/: resource_paths.sh
src/autosail_urdf/autosail_description/meshes/: quilla.dae
src/autosail_urdf/autosail_description/urdf/: autosail_base.urdf.xacro
src/autosail_urdf/autosail_gazebo/: CMakeLists.txt  package.xml
src/autosail_urdf/sailboat_gazebo/: CMakeLists.txt  package.xml
src/autosail_urdf/sailboat_gazebo/urdf/: sailboat_gazebo.urdf.xacro
src/autosail_urdf/sailboat_gazebo/urdf/components/: imu.xacro
src/autosail_urdf/sailboat_gazebo/urdf/dynamics/: autosail_dynamics_plugin.xacro
src/my_sailboat_controller/: package.xml  setup.cfg  setup.py
src/my_sailboat_controller/my_sailboat_controller/: gazebo_node.py  my_controller_node.py  my_decoding_node.py  pid_controller.py
thumb_nails/: images.md
