<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>GUI</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="john.giraldo2@udea.edu.co">Camilo Giraldo</maintainer>
  <license>TODO: License declaration</license>
  <!-- Execution dependencies -->
  <exec_depend>tkinter</exec_depend>
  <exec_depend>customtkinter<exec_depend>
  <exec_depend>request</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>subprocess</exec_depend>
  <exec_depend>codecs</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>spinbox19</exec_depend>
  <exec_depend>tkintermapview</exec_depend>
  <exec_depend>qutip</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>autosail_message</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>Simulator</exec_depend>



  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
