<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_sailboat_controller</name>
  <version>0.0.0</version>
  <description>This workspace manages packages for implementing sensors and controllers in order to make an autonomus sailing boat, it is conciebed to receive info trought MCUs as ESP32 and Raspberry Pi pico </description>
  <maintainer email="john.giraldo2@udea.edu.co">Camilo</maintainer>
  <license>TODO: License declaration</license>

  
  <exec_depend>autosail_message</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>pid_controller</exec_depend>
  <exec_depend>communicate</exec_depend>
  
  
  <!---<exec_depend>sensor_msgs</exec_depend>-->
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
