<?xml version="1.0"?>
<package format="2">
  <name>sailboat_gazebo</name>
  <version>1.3.0</version>
  <description>
    Provides templates for integrating the Sailboat model into gazebo with dynamics, sensors, etc.
  </description>
  <maintainer email="john.giraldo2@udea.edu.co">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>autosail_description</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
